turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:9: error: illegal start of statement
        match rule(state(c)(1) {
        ^